ECS Refactoring Part 3
1. Reworking Ecs Observer to be independent from Ecs View. Fixing broken logic for "on remove" observer types.
2. Implementing a temporal solution for Ecs Systems "Auto registrations". Later, it will probably need to be scheduler dependent

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Directories
 .vs/
 Binaries/
-Engine/Generated
+Engine/**/Generated/*
 
 # Files
 *.vcxproj
@@ -45,3 +45,4 @@ Makefile
 
 #Exclude
 !3rdParty/
+vs-chromium-project.txt
